<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  <parent>
    <groupId>com.sr</groupId>
    <artifactId>servicepoint</artifactId>
    <version>1.0.0-SNAPSHOT</version>
  </parent>

  <modelVersion>4.0.0</modelVersion>
  <groupId>com.sr</groupId>
  <artifactId>servicepoint-parent</artifactId>
  <packaging>pom</packaging>
  <name>Servicepoint :: Parent</name>
  <description>Servicepoint Parent POM</description>

  <properties>
    <!-- SPRING LIBRARIES -->
    <spring.framework.version>4.0.0.RELEASE</spring.framework.version>

    <!-- HIBERNATE LIBRARIES -->
    <!-- https://docs.jboss.org/hibernate/core/4.3/manual/en-US/html_single/#assoc-unidirectional -->
    <hibernate.core.version>4.3.0.CR2</hibernate.core.version>

    <!-- SPRING DATA LIBRARIES -->
    <!-- http://docs.spring.io/spring-data/jpa/docs/1.4.3.RELEASE/reference/htmlsingle/ -->
    <spring.data.version>1.5.0.M1</spring.data.version>

    <!-- SPRING INTEGRATION LIBRARIES -->
    <spring.integration.version>4.0.0.M2</spring.integration.version>

    <!-- QUERYDSL LIBRARIES -->
    <querydsl.version>3.2.4</querydsl.version>

    <!-- DB LIBRARIES -->
    <bonecp.version>0.8.0.RELEASE</bonecp.version>
    <h2.driver.version>1.3.170</h2.driver.version>
    <postgresql.driver.version>9.1-901.jdbc4</postgresql.driver.version>

    <!-- APACHE COMMONS LIBRARIES -->
    <commons.lang3.version>3.1</commons.lang3.version>

    <!-- LOGGING LIRARIES -->
    <logback.version>1.0.13</logback.version>
    <slf4j.version>1.7.5</slf4j.version>

    <!-- J2EE LIBRARIES -->
    <servlet.version>3.1.0</servlet.version>

    <!-- ACTIVEMQ LIBRARIES -->
    <activemq.version>5.7.0</activemq.version>

    <!-- JETTY LIBRARIES -->
    <jetty.version>8.1.14.v20131031</jetty.version>

    <!-- OTHER 3RD PARTY LIBRARIES -->
    <guava.version>15.0</guava.version>
    <dozer.version>5.4.0</dozer.version>
    <jodatime.version>2.3</jodatime.version>
    <jodatime.usertype.version>2.0.1</jodatime.usertype.version>
    <jackson.version>2.3.0</jackson.version>
    <swagger.version>0.6.6</swagger.version>
    <dozer.version>5.4.0</dozer.version>

    <!-- ~ TEST LIBRARIES -->
    <junit.version>4.11</junit.version>
    <mockito.version>1.9.5</mockito.version>

    <!-- MAVEN PLUGINS -->
    <maven.assembly.version>2.4</maven.assembly.version>
    <maven.compiler.version>3.1</maven.compiler.version>
    <maven.surefire.version>2.12</maven.surefire.version>
    <maven.jar.version>2.4</maven.jar.version>
    <maven.war.version>2.4</maven.war.version>
    <maven.resources.version>2.6</maven.resources.version>
    <maven.jetty.version>8.1.14.v20131031</maven.jetty.version>
    <maven.apt.version>1.1.1</maven.apt.version>
    <maven.sonar.version>2.1</maven.sonar.version>
    <maven.enforcer.version>1.3.1</maven.enforcer.version>
    <liquidbase.maven.version>3.0.5</liquidbase.maven.version>
    <maven.checkstyle.version>2.9.1</maven.checkstyle.version>
    <sass.maven.version>1.1.1</sass.maven.version>
    <nodejs.maven.version>1.0.4</nodejs.maven.version>
    <requirejs.maven.version>2.0.0</requirejs.maven.version>

    <!-- PROJECT PROPERTIES -->
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <java.version>1.7</java.version>
  </properties>

  <dependencyManagement>
    <dependencies>

      <!-- SERVICEPOINT INTERNAL LIBRARIES -->
      <dependency>
        <groupId>com.sr</groupId>
        <artifactId>servicepoint-core</artifactId>
        <version>${project.version}</version>
      </dependency>

      <!-- SPRING LIBRARIES -->
      <dependency>
        <groupId>org.springframework</groupId>
        <artifactId>spring-framework-bom</artifactId>
        <version>${spring.framework.version}</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency>
      <dependency>
        <groupId>org.springframework.</groupId>
        <artifactId>spring-test</artifactId>
        <version>${spring.framework.version}</version>
      </dependency>

      <!-- HIBERNATE LIBRARIES -->
      <dependency>
        <groupId>org.hibernate</groupId>
        <artifactId>hibernate-core</artifactId>
        <version>${hibernate.core.version}</version>
      </dependency>
      <dependency>
        <groupId>org.hibernate</groupId>
        <artifactId>hibernate-entitymanager</artifactId>
        <version>${hibernate.core.version}</version>
      </dependency>

      <!-- SPRING DATA LIBRARIES -->
      <dependency>
        <groupId>org.springframework.data</groupId>
        <artifactId>spring-data-jpa</artifactId>
        <version>${spring.data.version}</version>
      </dependency>

      <!-- SPRING INTEGRATION LIBRARIES -->
      <dependency>
        <groupId>org.springframework.integration</groupId>
        <artifactId>spring-integration-core</artifactId>
        <version>${spring.integration.version}</version>
      </dependency>
      <dependency>
        <groupId>org.springframework.integration</groupId>
        <artifactId>spring-integration-jms</artifactId>
        <version>${spring.integration.version}</version>
      </dependency>

      <!-- QUERYDSL LIBRARIES -->
      <dependency>
        <groupId>com.mysema.querydsl</groupId>
        <artifactId>querydsl-jpa</artifactId>
        <version>${querydsl.version}</version>
      </dependency>

      <!-- APACHE COMMONS LIBRARIES -->
      <dependency>
        <groupId>org.apache.commons</groupId>
        <artifactId>commons-lang3</artifactId>
        <version>${commons.lang3.version}</version>
      </dependency>

      <!-- LOGGING LIBRARIES -->
      <dependency>
        <groupId>org.slf4j</groupId>
        <artifactId>slf4j-api</artifactId>
        <version>${slf4j.version}</version>
      </dependency>
      <dependency>
        <groupId>org.slf4j</groupId>
        <artifactId>jcl-over-slf4j</artifactId>
        <version>${slf4j.version}</version>
      </dependency>
      <dependency>
        <groupId>ch.qos.logback</groupId>
        <artifactId>logback-core</artifactId>
        <version>${logback.version}</version>
      </dependency>
      <dependency>
        <groupId>ch.qos.logback</groupId>
        <artifactId>logback-classic</artifactId>
        <version>${logback.version}</version>
      </dependency>

      <!-- J2EE LIBRARIES -->
      <dependency>
        <groupId>javax.servlet</groupId>
        <artifactId>javax.servlet-api</artifactId>
        <version>${servlet.version}</version>
        <scope>provided</scope>
      </dependency>

      <!-- ACTIVEMQ LIBRARIES -->
      <dependency>
        <groupId>org.apache.activemq</groupId>
        <artifactId>activemq-core</artifactId>
        <version>${activemq.version}</version>
        <!--      <exclusions>
                <exclusion>
                  <artifactId>spring-context</artifactId>
                  <groupId>org.springframework</groupId>
                </exclusion>
              </exclusions>-->
      </dependency>

      <!-- JETTY LIBRARIES -->
      <dependency>
        <groupId>org.eclipse.jetty</groupId>
        <artifactId>jetty-servlets</artifactId>
        <version>${jetty.version}</version>
      </dependency>

      <!-- OTHER 3RD PARTY LIBRARIES -->
      <dependency>
        <groupId>com.google.guava</groupId>
        <artifactId>guava</artifactId>
        <version>${guava.version}</version>
      </dependency>
      <dependency>
        <groupId>net.sf.dozer</groupId>
        <artifactId>dozer</artifactId>
        <version>${dozer.version}</version>
      </dependency>
      <dependency>
        <groupId>com.fasterxml.jackson.core</groupId>
        <artifactId>jackson-databind</artifactId>
        <version>${jackson.version}</version>
      </dependency>
      <dependency>
        <groupId>com.mangofactory</groupId>
        <artifactId>swagger-springmvc</artifactId>
        <version>${swagger.version}</version>
        <exclusions>
          <exclusion>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-log4j12</artifactId>
          </exclusion>
        </exclusions>
      </dependency>
      <dependency>
        <groupId>joda-time</groupId>
        <artifactId>joda-time</artifactId>
        <version>${jodatime.version}</version>
      </dependency>
      <dependency>
        <groupId>org.jadira.usertype</groupId>
        <artifactId>usertype.jodatime</artifactId>
        <version>${jodatime.usertype.version}</version>
      </dependency>
      <dependency>
        <groupId>net.sf.dozer</groupId>
        <artifactId>dozer</artifactId>
        <version>${dozer.version}</version>
        <exclusions>
          <exclusion>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-log4j12</artifactId>
          </exclusion>
          <exclusion>
            <groupId>org.slf4j</groupId>
            <artifactId>jcl-over-slf4j</artifactId>
          </exclusion>
        </exclusions>
      </dependency>

      <!-- DB LIBRARIES -->
      <dependency>
        <groupId>com.h2database</groupId>
        <artifactId>h2</artifactId>
        <version>${h2.driver.version}</version>
      </dependency>
      <dependency>
        <groupId>postgresql</groupId>
        <artifactId>postgresql</artifactId>
        <version>${postgresql.driver.version}</version>
      </dependency>
      <dependency>
        <groupId>com.jolbox</groupId>
        <artifactId>bonecp</artifactId>
        <version>${bonecp.version}</version>
      </dependency>

      <!-- ~ TEST LIBRARIES -->
      <dependency>
        <groupId>junit</groupId>
        <artifactId>junit</artifactId>
        <version>${junit.version}</version>
        <scope>test</scope>
      </dependency>
      <dependency>
        <groupId>org.mockito</groupId>
        <artifactId>mockito-all</artifactId>
        <version>${mockito.version}</version>
        <scope>test</scope>
      </dependency>
    </dependencies>
  </dependencyManagement>

  <build>
    <resources>
      <resource>
        <directory>src/main/java</directory>
        <excludes>
          <exclude>**/*.java</exclude>
        </excludes>
      </resource>
      <resource>
        <directory>src/main/resources</directory>
        <includes>
          <include>**/*</include>
        </includes>
      </resource>
      <resource>
        <directory>src/main/resources-filtered</directory>
        <includes>
          <include>**</include>
        </includes>
        <filtering>true</filtering>
      </resource>
      <resource>
        <directory>target/generated/src/main/resources</directory>
        <includes>
          <include>**</include>
        </includes>
      </resource>
    </resources>
    <testResources>
      <testResource>
        <directory>src/test/java</directory>
        <excludes>
          <exclude>**/*.java</exclude>
        </excludes>
      </testResource>
      <testResource>
        <directory>src/test/resources</directory>
        <includes>
          <include>**</include>
        </includes>
      </testResource>
      <testResource>
        <directory>src/test/java</directory>
        <includes>
          <include>**/*.xml</include>
        </includes>
        <filtering>true</filtering>
      </testResource>
      <testResource>
        <directory>target/generated/src/test/resources</directory>
        <includes>
          <include>**</include>
        </includes>
      </testResource>
    </testResources>
    <pluginManagement>
      <plugins>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-assembly-plugin</artifactId>
          <version>${maven.assembly.version}</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-compiler-plugin</artifactId>
          <version>${maven.compiler.version}</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-surefire-plugin</artifactId>
          <version>${maven.surefire.version}</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-jar-plugin</artifactId>
          <version>${maven.jar.version}</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-war-plugin</artifactId>
          <version>${maven.war.version}</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-resources-plugin</artifactId>
          <version>${maven.resources.version}</version>
        </plugin>
        <plugin>
          <groupId>org.mortbay.jetty</groupId>
          <artifactId>jetty-maven-plugin</artifactId>
          <version>${maven.jetty.version}</version>
        </plugin>
        <plugin>
          <groupId>com.mysema.maven</groupId>
          <artifactId>apt-maven-plugin</artifactId>
          <version>${maven.apt.version}</version>
          <dependencies>
            <dependency>
              <groupId>com.mysema.querydsl</groupId>
              <artifactId>querydsl-apt</artifactId>
              <version>${querydsl.version}</version>
            </dependency>
          </dependencies>
        </plugin>
        <plugin>
          <groupId>org.codehaus.mojo</groupId>
          <artifactId>sonar-maven-plugin</artifactId>
          <version>${maven.sonar.version}</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-enforcer-plugin</artifactId>
          <version>${maven.enforcer.version}</version>
        </plugin>
        <plugin>
          <groupId>org.liquibase</groupId>
          <artifactId>liquibase-maven-plugin</artifactId>
          <version>${liquidbase.maven.version}</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-checkstyle-plugin</artifactId>
          <version>${maven.checkstyle.version}</version>
          <dependencies>
            <dependency>
              <groupId>com.medcurial.erx</groupId>
              <artifactId>erx-buildtools</artifactId>
              <version>${project.version}</version>
            </dependency>
          </dependencies>
        </plugin>
        <plugin>
          <groupId>org.jasig.maven</groupId>
          <artifactId>sass-maven-plugin</artifactId>
          <version>${sass.maven.version}</version>
        </plugin>
        <plugin>
          <groupId>com.github.skwakman.nodejs-maven-plugin</groupId>
          <artifactId>nodejs-maven-plugin</artifactId>
          <version>${nodejs.maven.version}</version>
        </plugin>
        <plugin>
          <groupId>com.github.mcheely</groupId>
          <artifactId>requirejs-maven-plugin</artifactId>
          <version>${requirejs.maven.version}</version>
        </plugin>
      </plugins>
    </pluginManagement>

    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <configuration>
          <source>${java.version}</source>
          <target>${java.version}</target>
          <optimize>true</optimize>
          <debug>true</debug>
          <encoding>${project.build.sourceEncoding}</encoding>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-war-plugin</artifactId>
        <configuration>
          <failOnMissingWebXml>false</failOnMissingWebXml>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>sonar-maven-plugin</artifactId>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <configuration>
          <argLine>-Xms512m -Xmx1024m -XX:MaxPermSize=512m</argLine>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-enforcer-plugin</artifactId>
        <executions>
          <execution>
            <id>enforce-java</id>
            <phase>compile</phase>
            <goals>
              <goal>enforce</goal>
            </goals>
            <configuration>
              <rules>
                <requireJavaVersion>
                  <version>${java.version}</version>
                </requireJavaVersion>
              </rules>
            </configuration>
          </execution>
        </executions>
      </plugin>
    </plugins>
  </build>

</project>